[package]
name = "rocketmq-client-v4"
version = "0.4.1"
edition = "2021"
description = "rocket mq rust client for remote protocol. works on rocket mq V4"
license = "MIT"
homepage = "https://github.com/zhangyangyang3/rocketmq-client-v4"

[dependencies]
zip = "2.2.0"
sysinfo = "0.31.4"
atomic-counter = "1.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.128"
log = "0.4.21"
tokio = { version = "1.40.0", features = ["time", "macros", "rt", "net", "sync", "io-util", "rt-multi-thread"] }
bytes = "1.7.2"
local-ip-address = "0"
time = "0.3.36"
simple_logger = "5"
hex = "0.4.3"
uuid = { version = "1.10.0", features = ["v4"] }
dashmap = "6.1.0"